--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "chat",
+  "name": "chatapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+ "scripts": {
+    "build": "pnpm install && pnpm -C frontend build && pnpm -C backend build",
+    "start": "pnpm -C backend start"
   },
   "keywords": [],
   "author": "",
