--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+    "engines": {
+    "node": ">=20.0.0"
+  },
  "scripts": {
     "build": "pnpm install && pnpm -C frontend build && pnpm -C backend build",
     "start": "pnpm -C backend start"
