--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.5",
     "daisyui": "^5.5.18",
+    "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.13.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.11"
