--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
+    "build": "echo 'No build step required'",
     "start": "node src/index.js"
   },
   "type": "module",
