--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-router": "^7.13.0",
     "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18",
-    "zustand": "^5.0.11"
+    "zustand": "^5.0.11",
+    "vite": "npm:rolldown-vite@7.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -30,8 +31,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "npm:rolldown-vite@7.2.5"
+    "globals": "^16.5.0"
   },
   "pnpm": {
     "overrides": {
